# serverless-genai-log-analyzer

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_Version5.md  COMPLIANCE.md  COMPLIANCE_Version2.md  README.md  docker-compose.yml  dockerfile  main_old.py.bak  pyproject.toml  test_data.json  test_ingest.py  test_redactor.py
.github/workflows/: deploy.yml
api/: __init__.py  api_keys.yaml  audit.py  auth.py  main.py  middleware.py  orchestrator.py  rate_limit.py
core/: analyzer_runner.py  event_bus.py  incident_store.py  plugin_loader.py  plugin_registry.py
core/analyzers/: gemini_incident_triage.py  simple_incident_summary.py
core/connectors/: kafka_connector.py
core/detectors/: error_spike.py
data/chroma/: chroma.sqlite3
data/delta-lake/logs/: part-00000-48e58fd6-1ce5-495f-af0e-a2f8ada816c3-c000.snappy.parquet
engine/: __init__.py  analyzer.py  null_analyzer.py
ingestion/: __init__.py  kafka_consumer.py  mock_producer.py
plugins/: example_client_module.py
processing/: __init__.py  enricher.py  pii_profiles.yaml  redactor.py  redactor_null.py
requirements/: full.txt  minimal.txt
scripts/: generate_key.py
storage/: __init__.py  lake.py  lake_mock.py  null_storage.py
vector_db/: __init__.py  null_store.py  store.py
